# CEIA_peia

./: pyproject.toml
ejercicios_clases/: ejercicios_variables_aleatorias.ipynb
notebooks_clases/: 1 - Variables aleatorias.ipynb  2 - Experimento con dados.ipynb  3 - Distribuciones de va discretas.ipynb  4 - Inferencia bayesiana.ipynb  5. Ley de los grandes números.ipynb  6. Teorema central del límite.ipynb  7. Intervalos de confianza.ipynb  8. ANOVA.ipynb  9. Tests de hipótesis.ipynb  datos_ventas.csv
trabajos_practicos/: TP_1.ipynb  TP_2.ipynb  TP_3.ipynb
