[project]
name = "ceia-peia"
version = "0.1.0"
description = "Probabilidad y Estadística para Inteligencia Artificial - CEIA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.14",
    "seaborn>=0.13",
    "statsmodels>=0.14",
]
